--- a/quectel-CM/Makefile
+++ b/quectel-CM/Makefile
@@ -7,8 +7,8 @@ PKG_RELEASE:=1
 include $(INCLUDE_DIR)/package.mk
 
 define Package/quectel-CM
-  SECTION:=utils
-  CATEGORY:=iyunlink
+  SUBMENU:=WWAN Support
+  CATEGORY:=LINK4ALL
   TITLE:=quectel-CM
 endef
 
